--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import org.gradle.internal.jvm.Jvm
+
 buildscript {
 	ext {
 		kotlinVersion = '1.2.41'
@@ -14,6 +16,7 @@ buildscript {
 	}
 }
 
+apply plugin: 'java'
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-spring'
 apply plugin: 'kotlin-jpa'
@@ -23,17 +26,27 @@ apply plugin: 'io.spring.dependency-management'
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = 1.8
+
+if (Jvm.current().toString().startsWith("1.8.0")) {
+    apply from: 'java8gradle'
+} else if (Jvm.current().toString().startsWith("9")) {
+    apply from: 'java9.gradle'
+}
+// else if (org.gradle.internal.jvm.Jvm.current().toString().startsWith("10")) {
+//    apply from: 'java10.gradle'
+//}
+
+
 compileKotlin {
 	kotlinOptions {
 		freeCompilerArgs = ["-Xjsr305=strict"]
-		jvmTarget = "1.8"
+//		jvmTarget = "1.8"
 	}
 }
 compileTestKotlin {
 	kotlinOptions {
 		freeCompilerArgs = ["-Xjsr305=strict"]
-		jvmTarget = "1.8"
+//		jvmTarget = "1.8"
 	}
 }
 
@@ -63,4 +76,7 @@ dependencies {
 	testCompile("com.nhaarman:mockito-kotlin:1.5.0")
 	testImplementation('org.junit.jupiter:junit-jupiter-api')
 	testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine')
+
+    compile "org.glassfish.jaxb:jaxb-runtime:2.3.0"
+    compile "javax.activation:activation:1.1.1"
 }
